# argoApiChallenge

./: .gitignore  pyproject.toml
app/: main.py
app/api/: api.py
app/api/endpoints/: __init__.py  comments.py  images.py  users.py
app/controllers/: comment_controller.py  image_controller.py  user_controller.py
app/core/database/: _common_fields_models.py  create_admin_user.py  create_database.py  create_tables.py  database.py  init_db.py
app/core/dependencies/: deps.py
app/core/email/: email_manager.py
app/core/security/: jwt_token_manager.py  password_manager.py
app/models/: comment_model.py  image_model.py  user_model.py
app/schemas/: comment_schema.py  image_schema.py  user_schema.py  users_schema.py
configuration/: configs.py  settings.toml
docs/: README.md
tests/: conftest.py
tests/integration/: test_users.py
